deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: starbucks-gold-deployment
  namespace: default
spec:
  selector:
    matchLabels:
      name: starbucks-gold
  replicas: 4 # tells deployment to run 2 pods matching the template
  template: # create pods using pod definition in this template
    metadata:
      # unlike pod.yaml, the name is not included in the meta data as a unique name is
      # generated from the deployment name
      labels:
        name: starbucks-gold
    spec:
      containers:
      - name: starbucks-gold
        image: gcr.io/PROJECT_ID/IMAGE:TAG
        ports:
        - containerPort: 8080
